# AI_Agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: private.example.yaml  public.yaml
src/ai_agent/: __init__.py
src/ai_agent/config/: settings.py
src/ai_agent/core/: __init__.py
src/ai_agent/core/agent/: __init__.py
src/ai_agent/core/integrations/: __init__.py  amap_weather_client.py
src/ai_agent/core/llm/: __init__.py  clients.py  factory.py
src/ai_agent/core/memory/: __init__.py  base.py  long_term_file.py  manager.py  short_term.py
src/ai_agent/core/rag/: __init__.py
src/ai_agent/frameworks/: __init__.py
src/ai_agent/frameworks/langchain/: __init__.py
src/ai_agent/frameworks/langgraph/: __init__.py
src/ai_agent/learning/: README.md  __init__.py
src/ai_agent/learning/stage_00_foundation/: README.md  __init__.py  react_hello_world.py  weather_info_demo.py
src/ai_agent/learning/stage_01_native_llm/: README.md  weather_info_demo.py
src/ai_agent/learning/stage_02_tools_function_calling/: README.md  __init__.py  function_calling_demo.py
src/ai_agent/learning/stage_03_react_agent/: README.md  __init__.py  react_loop_demo.py
src/ai_agent/learning/stage_04_memory/: README.md  __init__.py  memory_react_demo.py
src/ai_agent/learning/stage_05_rag/: README.md
src/ai_agent/learning/stage_06_framework_integrations/: README.md
src/ai_agent/tools/: __init__.py  base.py  function_calling.py  registry.py  schemas.py
src/ai_agent/utils/: bootstrap.py  interactive.py  json_extract.py  logger.py
(+6 files in other folders)
